# Demo-pallet

./: README.md
node/: Cargo.toml
node/src/: chain_spec.rs
pallets/nodle/: Cargo.toml
pallets/nodle/src/: lib.rs  mock.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
