[package]
name = "pallet-nodle"
version = "0.1.0"
authors = ["Alfredo Lopez <alfredolopez80@gmail.com>"]
description = 'FRAMEv2 This Pallet is useful to change parameter values gradually to ensure a smooth transition.'
edition = "2018"
readme = 'README.md'
repository = 'https://github.com/alfredolopez80/nodle-pallet/'

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"] }

frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.11", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
]

try-runtime = ["frame-support/try-runtime"]
